[package]
name = "egui_dev_tools"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Devtools for egui - Inspect widgets and map them back to source code"
repository = "https://github.com/membrane-io/egui_dev_tools"
authors = ["Juan Campa <juan@membrane.io>"]

[lib]
path = "src/lib.rs"

[dependencies]
egui = { path = "../crates/egui" }
log = "~0.4"
wasm-bindgen = "~0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
backtrace = "~0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "~0.3"
